--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -58,8 +58,8 @@ jobs:
         libelf1 libelf-dev zlib1g-dev libclang-13-dev \
         make git clang llvm pkg-config build-essential
 
-    - name: install cyaml
-      run: cd libcyaml-main && sudo make install
+    - name: install libcyaml
+      run: git clone https://github.com/tlsa/libcyaml.git && cd libcyaml && sudo make install
 
     - name: build package
       run:  make build
