--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -49,7 +49,7 @@ jobs:
           platforms: linux/amd64
           # Note: tags has to be all lower-case
           tags: |
-            ghcr.io/${{ github.repository_owner }}/ebpf_app:latest
+            ghcr.io/${{ github.repository_owner }}/ebpf_project:latest
           push: true
 
       - name: Image digest
